Implements and correct frontend, made some adjustments to ms-notes and gateway